cmake_minimum_required(VERSION 4.0)
project(C___Concurrency)

set(CMAKE_CXX_STANDARD 20)

add_executable(C___Concurrency main.cpp
        "src/code list 1.1.cpp"
        "src/code list 2.1.cpp"
        "src/code list 2.2.cpp"
        "src/code list 2.3.cpp"
        "src/code list 2.4.cpp"
        "src/code list 2.5.cpp"
        "src/code list 2.6.cpp"
        "src/code list 2.7.cpp"
        "src/code list 2.8.cpp"
        "src/code list 2.9.cpp"
        "src/code list 3.1.cpp"
        "src/code list 3.2.cpp"
        "src/code list 3.3.cpp"
        "src/code list 3.4.cpp"
        "src/code list 3.5.cpp"
        "src/code list 3.6.cpp"
        "src/code list 3.7.cpp"
        "src/code list 3.8.cpp"
        "src/code list 3.9.cpp"
        "src/code list 3.10.cpp"
        "src/code list 3.11.cpp"
        "src/code list 3.12.cpp"
)
